[gd_scene load_steps=10 format=3 uid="uid://d0m8kejefkuv0"]

[ext_resource type="Script" path="res://Environment/MapAircraft/MapAircraft.gd" id="1_gu8js"]
[ext_resource type="PackedScene" uid="uid://f5q3lvkkp6et" path="res://Environment/Ocean/Ocean.tscn" id="1_y4nq7"]
[ext_resource type="PackedScene" uid="uid://cl861nerpvmo8" path="res://Props/AircraftCarrier/Aircraft_Carrier.tscn" id="2_jj14q"]
[ext_resource type="PackedScene" uid="uid://bin24lcxi48bf" path="res://Props/LandingTarget/LandingTarget.tscn" id="5_q3ax4"]
[ext_resource type="PackedScene" uid="uid://befsooyoi5ib3" path="res://Props/GateCheckpoint/GateCheckpoint.tscn" id="5_xsqg6"]
[ext_resource type="PackedScene" uid="uid://bxo5ikrfddrqy" path="res://Props/FloatingTarget/FloatingTarget.tscn" id="6_3rd16"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3xhrv"]
sky_top_color = Color(0.757292, 0.801019, 0.862069, 1)
sky_horizon_color = Color(0.508797, 0.669855, 0.852991, 1)
ground_bottom_color = Color(0.509804, 0.670588, 0.854902, 1)
ground_horizon_color = Color(0.509804, 0.670588, 0.854902, 1)
ground_curve = 1.57586

[sub_resource type="Sky" id="Sky_l02uc"]
sky_material = SubResource("ProceduralSkyMaterial_3xhrv")

[sub_resource type="Environment" id="Environment_h2hkx"]
background_mode = 2
sky = SubResource("Sky_l02uc")
ambient_light_color = Color(0.877616, 0.877616, 0.877616, 1)

[node name="Environment" type="Node3D"]
script = ExtResource("1_gu8js")

[node name="Ocean" parent="." instance=ExtResource("1_y4nq7")]
transform = Transform3D(0.999998, -0.00167487, 0.000804524, 0.0016722, 0.999993, 0.00332093, -0.000810061, -0.00331959, 0.999994, 0, 0, 0)

[node name="AircraftCarrier" parent="." instance=ExtResource("2_jj14q")]
transform = Transform3D(2.62268e-08, 0, -0.2, 0, 0.2, 0, 0.2, 0, 2.62268e-08, -11.3819, 0.379997, 0)

[node name="PlaneGateManager" type="Node3D" parent="."]

[node name="GateCheckpoint" parent="PlaneGateManager" instance=ExtResource("5_xsqg6")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 51.3455, 15.5557, 1)

[node name="GateCheckpoint2" parent="PlaneGateManager" instance=ExtResource("5_xsqg6")]
transform = Transform3D(-0.0682594, 0, -0.997667, 0, 1, 0, 0.997667, 0, -0.0682594, 114.592, 25.1171, 3.99817)

[node name="SkyDivingGateManager" type="Node3D" parent="."]

[node name="GateCheckpoint" parent="SkyDivingGateManager" instance=ExtResource("5_xsqg6")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 200, 0)

[node name="GateCheckpoint1" parent="SkyDivingGateManager" instance=ExtResource("5_xsqg6")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 150, 0)

[node name="GateCheckpoint2" parent="SkyDivingGateManager" instance=ExtResource("5_xsqg6")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.984196, 0.113116, -0.136249, 0, 0.7694, 0.638767, 0.177085, -0.628672, 0.75724, -27.014, 5.99028, 0.6255)
shadow_enabled = true

[node name="SkydivingLandingTarget" parent="." instance=ExtResource("5_q3ax4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6942, 2.44603, -0.131649)

[node name="SkydiverStartingPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 210, 0)

[node name="PlaneTargetManager" type="Node3D" parent="."]

[node name="FloatingTarget" parent="PlaneTargetManager" instance=ExtResource("6_3rd16")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 92.0566, 23.1831, 4.17228)

[node name="FloatingTarget2" parent="PlaneTargetManager" instance=ExtResource("6_3rd16")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 136.741, 29.0771, 4.17228)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2hkx")
